# weather_service

./: README.md  pyproject.toml
app/: main.py
app/routes/: weather.py
app/services/: weather.py
